--- a/views/success.ejs
+++ b/views/success.ejs
@@ -1,34 +1,33 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= title %></title>
-  </head>
-  <style>
-    body {
+    <title>Success</title>
+    <style>
+      body {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          
+          width: 90vw;
+          height: 100vh;
+          margin: 0;
+          padding: 0;
   
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        
-        width: 90vw;
-        height: 100vh;
-        margin: 0;
-        padding: 0;
-
-        background-color: #2d2e2f;
-        
-        font: 40px "Lucida Grande", Helvetica, Arial, sans-serif;
-    }
-    header{
-        width: 400px;
-        padding: 25px;
-        border: 1px solid #2c306f;
-        border-radius: 5px;
-        text-align: center;
-
-        background-color: #ffffff;
-    }
-  </style>
+          background-color: #2d2e2f;
+          
+          font: 40px "Lucida Grande", Helvetica, Arial, sans-serif;
+      }
+      header{
+          width: 400px;
+          padding: 25px;
+          border: 1px solid #2c306f;
+          border-radius: 5px;
+          text-align: center;
+  
+          background-color: #ffffff;
+      }
+    </style>
+  </head>
   <body>
         <header>
             Your Form has been Submited successfully
