--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -232,3 +232,13 @@ input[type="submit"]:active{
   background-color: #f05731;
   border-radius: 2px;
 }
+
+.success{
+  height: 20px;
+  margin: 10px;
+  padding: 10px;
+  color: white;
+  text-align: center;
+  background-color: #04f704;
+  border-radius: 2px;
+}
