--- a/views/closed.ejs
+++ b/views/closed.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Success</title>
+    <title>Closed</title>
     <style>
       body {
           display: flex;
@@ -12,10 +12,11 @@
           height: 100vh;
           margin: 0;
           padding: 0;
+          user-select: none;
   
           background-color: #2d2e2f;
           
-          font: 40px "Lucida Grande", Helvetica, Arial, sans-serif;
+          font: 45px "Lucida Grande", Helvetica, Arial, sans-serif;
       }
       header{
           width: 400px;
@@ -30,7 +31,7 @@
   </head>
   <body>
         <header>
-            Your Form has been Submited successfully
+            Form is Closed
         </header>
   </body>
 </html>
