--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -81,6 +81,9 @@ form{
 .days > div > input{
   opacity: 0;
   position: absolute;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
   z-index: 1;
   left: -5px;
   top: -2.5px;
@@ -120,6 +123,7 @@ form{
   border: 1px solid #2c306f;
   border-radius: 2px;
   cursor: pointer;
+  pointer-events: none;
 }
 .hours > div:hover{
   border: 1px solid #3f4ae2;
@@ -132,6 +136,7 @@ form{
   top: -2.5px;
   width: 100%;
   height: 80px;
+  pointer-events: auto;
   cursor: pointer !important;
 }
 .hours > div > label{
@@ -149,8 +154,6 @@ form{
 .default > div > label{
   cursor: default !important;
 }
-
-
 
 
 p{
@@ -190,37 +193,50 @@ input[type="submit"]:active{
   background: linear-gradient(to top,#ffffff 0%, white 0% 100%);
 }
 
-.one{
+.zero:checked{
   background: linear-gradient(to top,#e2f3f5 12.5%, white 12.5% 100%);
 }
 
+.one{
+  background: linear-gradient(to top,#e2f3f5 10%, white 12.5% 100%);
+}
+
 .two{
-  background: linear-gradient(to top,#82E2F2 25%, white 25% 100%);
+  background: linear-gradient(to top,#b2ebf4 20%, white 20% 100%);
 }
 
 .three{
-  background: linear-gradient(to top,#22D1EE 37.5%, white 37.5% 100%);
+  background: linear-gradient(to top,#82E2F2 30%, white 30% 100%);
 }
 
 .four{
-  background: linear-gradient(to top,#3096F0 50%, white 50% 100%);
+  background: linear-gradient(to top,#22D1EE 40%, white 40% 100%);
 }
 
 .five{
-  background: linear-gradient(to top,#3778F1 62.5%, white 62.5% 100%);
+  background: linear-gradient(to top,#3096F0 50%, white 50% 100%);
 }
 
 .six{
-  color: white;
-  background: linear-gradient(to top,#3D5AF1 75%, white 75% 100%);
+  background: linear-gradient(to top,#3778F1 60%, white 60% 100%);
 }
 
 .seven{
   color: white;
-  background: linear-gradient(to top,#263896 87.5%, white 87.5% 100%);
+  background: linear-gradient(to top,#3D5AF1 70%, white 70% 100%);
 }
 
 .eight{
+  color: white;
+  background: linear-gradient(to top,#263896 80%, white 80% 100%);
+}
+
+.nine{
+  color: white;
+  background: linear-gradient(to top,#1A2768 90%, white 90% 100%);
+}
+
+.ten{
   color: white;
   cursor: default !important;
   background: linear-gradient(to top,#0E153A 100%, white 100% 100%);
